--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,3 @@
-# application.yml — главный конфигурационный файл Spring Boot.
-
-#Что нужно сделать:
- # - Указать настройки подключения к базе данных.
-  #- Указать порт приложения.
-#  - Настроить параметры безопасности и JWT.
-#  - Включить Swagger UI.
 server:
   address: 0.0.0.0
   port: 8080
@@ -38,3 +31,8 @@ management:
   endpoint:
     health:
       show-details: always
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+  api-docs:
+    path: /v3/api-docs
